<resources>
    <string name="app_name">Weather</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_select_update_time">Set Update Time</string>

    <string name="temp_title">Temperature Settings</string>
    <string name="temp_summary">Select a temperature setting.</string>
    <string-array name="temp_options">
        <item >Fahrenheit</item>
        <item >Celsius</item>
    </string-array>
    <string-array name="temp_values">
        <item >0</item>
        <item >1</item>
    </string-array>

    <string name="time_title">Time Settings</string>
    <string name="time_summary">Select a time format.</string>
    <string-array name="time_options">
        <item >12-Hour</item>
        <item >24-Hour</item>
    </string-array>
    <string-array name="time_values">
        <item >0</item>
        <item >1</item>
    </string-array>

    <string-array name="theme_options">
        <item >Morning</item>
        <item >Night</item>
        <item>Afternoon</item>
    </string-array>
    <string-array name="theme_values">
        <item >0</item>
        <item >1</item>
        <item>2</item>
    </string-array>

    <string name="cityCheck">Unable to obtain Location.</string>
    <string name="lastUpdateCheck">""</string>
    <string name="descCheck">Unable to obtain weather information.</string>
    <string name="humidityCheck">Unable to obtain the humidity.</string>
    <string name="timeCheck">Unable to obtain time of sunrise.</string>

    <string name="about">Check</string>
    <string name="theme_title">Theme Settings</string>
    <string name="theme_summary">Select a theme.</string>
    <string name="btRefresh">Refresh</string>

    <string name="location">Location</string>
    <string name="save_location">Save Current Location</string>

</resources>
