<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_temperature"
        android:title="@string/temp_title"
        android:summary="@string/temp_summary"
        android:dialogTitle="@string/temp_title"
        android:entries="@array/temp_options"
        android:entryValues="@array/temp_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="pref_time"
        android:title="@string/time_title"
        android:summary="@string/time_summary"
        android:dialogTitle="@string/time_title"
        android:entries="@array/time_options"
        android:entryValues="@array/time_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="pref_theme"
        android:title="@string/theme_title"
        android:summary="@string/theme_summary"
        android:dialogTitle="@string/theme_title"
        android:entries="@array/theme_options"
        android:entryValues="@array/theme_values"
        android:defaultValue="0" />

    <Preference
        android:key="pref_use_saved_location"
        android:defaultValue="false" />
</PreferenceScreen>